New Depsgraph - When camera is on inactive layer, it does not evaluate constraints #49981

Closed
opened 2016-11-10 05:19:39 +01:00 by Carlo Andreacchio · 10 comments

System Information
Win7 GTX 1080 x64

Blender Version
Broken: e9689e1

Short description of error
When camera is on inactive layer, it does not evaluate constraints

Exact steps for others to reproduce the error

  1. Open attached blend file
  2. Press play animation
  3. enable layer 3
  4. notice how the camera now moves.

Expected behaviour -- Camera constraints are always evaluated when looking through camera.
depsgraphBug.blend

**System Information** Win7 GTX 1080 x64 **Blender Version** Broken: e9689e1 **Short description of error** When camera is on inactive layer, it does not evaluate constraints **Exact steps for others to reproduce the error** 1. Open attached blend file 2. Press play animation 3. enable layer 3 4. notice how the camera now moves. Expected behaviour -- Camera constraints are always evaluated when looking through camera. [depsgraphBug.blend](https://archive.blender.org/developer/F396232/depsgraphBug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2016-11-11 12:12:37 +01:00

Not sure this is a bug or expected behavior? @Sergey, will let you handle this one. ;)

Not sure this is a bug or expected behavior? @Sergey, will let you handle this one. ;)

This issue was referenced by 25c534f20a

This issue was referenced by 25c534f20a0a15a4b07d61fb447740dc22049eed

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Seems like this bug has resurfaced, tested on 2836003f6b

Seems like this bug has resurfaced, tested on 2836003f6b

This issue was referenced by 24676b535a

This issue was referenced by 24676b535af5fe3feede0cb42838f8eb7b00e92c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49981
No description provided.