Fix T49981: When camera is on inactive layer, it does not evaluate constraints

Second round of fix, was broken by 843be91.